# anomaly-detection

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
anomaly_detection/: __init__.py
anomaly_detection/bcd/: __init__.py  _utils.py  vdiff.py  vdiff_v2.py
experiment/: bcd_vdiff.ipynb
tests/: test_vdiff.py  test_vdiff_v2.py
