[project]
name = "anomaly-detection"
version = "0.1.0"
description = "Anomaly detection algorithms for production metric monitoring"
authors = [{name = "Vivek Kaushik", email = "kingvkaushik@gmail.com"}]
requires-python = ">=3.11"
keywords = ["anomaly-detection", "time-series", "monitoring", "bad-change-detection", "deployment"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
]
dependencies = [
    "numpy==2.3.2",
    "pandas==2.3.1",
    "scikit-learn==1.7.2",
]

[project.urls]
Repository = "https://github.com/vskaush2/anomaly-detection"

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "matplotlib==3.10.5",
]

[tool.hatch.build.targets.wheel]
packages = ["anomaly_detection"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
